# dailykaenguru

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  default_aarch64-unknown-linux-gnu.nix  shell.nix
.github/workflows/: build.yml
src/: bot.rs  download.rs  error.rs  main.rs  main.rs~  persistence.rs
