[package]
name = "dailykaenguru"
version = "0.1.0"
authors = ["jvytee <jvytee@posteo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.8"
getopts = "0.2"
log = "0.4"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
tokio-stream = "0.1"
