[package]
name = "dailykaenguru"
version = "0.3.0"
authors = ["jvytee <jvytee@posteo.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.9"
envy = "0.4"
getopts = "0.2"
log = "0.4"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
teloxide = { version = "0.9", features = ["auto-send", "ctrlc_handler", "macros"] }
tokio = { version = "1.18", features = ["rt-multi-thread", "time", "macros"] }
tokio-stream = "0.1"
